2007-06-28  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclVar.c (UnsetVarStruct): fix possible segfault.

2007-06-27  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclTrace.c:   Corrected broken trace reversal logic in
	* generic/tclTest.c:    TclCheckInterpTraces that led to infinite loop
	* tests/trace.test:     when multiple Tcl_CreateTrace traces were set
	and one of them did not fire due to level restrictions.  [Bug 1743931].

2007-06-26  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclBasic.c (TclEvalEx):	Moved some arrays from the
	C stack to the Tcl stack.

2007-06-26  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclVar.c (UnsetVarStruct): more streamlining.

2007-06-25  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclExecute.c:	Safety checks to avoid crashes in the
	TclStack* routines when called with an incompletely initialized
	interp.  [Bug 1743302]

2007-06-25  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclVar.c (UnsetVarStruct): fixing incomplete change,
	more streamlining.

2007-06-24  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclVar.c (TclDeleteCompiledLocalVars): removed inlining
	that ended up not really optimising (limited benchmarks). Now
	calling UnsetVarStruct (streamlined old code is #ifdef'ed out, in
	case better benchmarks do show a difference).

	* generic/tclVar.c (UnsetVarStruct): fixed a leak introduced in
	last commit.

2007-06-23  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclVar.c (UnsetVarStruct, TclDeleteVars): made the logic
	slightly clearer, eliminated some duplicated code.

	*** POTENTIAL INCOMPATIBILITY *** (tclInt.h and Var struct users) 
	The core never builds VAR_LINK variable to have traces. Such a
	"monster", should one exist, will now have its unset traces called
	*before* it is unlinked.

2007-06-23  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/tclMacOSXNotify.c (AtForkChild): don't call CoreFoundation